codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
● I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

● Explored
  └ Search Change Approved
    Read diff_render.rs

● Investigating rendering code (0s ● esc to interrupt)


› Summarize recent commits

  100% context left
