codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob5
---
● Explored
  └ List ls -la
    Read foo.txt
